# EasyCord

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEMO_SCRIPT.md  MANIFEST.in  MODEL_CONTEXT.md  README.md  RELEASES.md  RELEASE_v2.1.md  RELEASE_v3.8.1.md  RELEASE_v4.0.0.md  RELEASE_v4.1.1.md  RELEASE_v4.1.md  RELEASE_v4.2.0.md  RELEASE_v4.3.1.md  RELEASE_v4.3.md  RELEASE_v4.5.0-beta.1.md  RELEASE_v4.5.0-beta.3.md  RELEASE_v4.5.0.md  ROADMAP_v4.4.0.md  benchmark-results.json  cspell.json  model.md  pyproject.toml  release.ps1
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-fix-issues.yml  auto-release-label.yml  issue-triage.yml  perf-regression.yml  pr-governance.yml  release.yml  tests.yml
context/: architecture.md  conventions.md
docs/: ROLES_DIFFERENTIATOR.md  api.md  concepts.md  examples.md  fork-and-expand.md  framework.md  getting-started.md  index.md  performance-and-usability.md  quickstart-production.md  release-notes.md
docs/superpowers/specs/: 2026-04-23-v3.4-design.md
easycord/: __init__.py  _bot_commands.py  _bot_events.py  _bot_guild.py  _bot_plugins.py  _context_base.py  _context_channels.py  _context_moderation.py  _context_ui.py  audit.py  bot.py  builtin_plugins.py  builtin_tools.py  composer.py  context.py  context_builder.py  conversation_memory.py  database.py  decorators.py  embed_cards.py  group.py  i18n.py  managers.py  middleware.py  orchestrator.py  plugin.py  registry.py  server_config.py  tool_limits.py  tools.py
easycord/builders/: __init__.py  button.py  embed.py  modal.py  select.py
easycord/helpers/: __init__.py  config.py  context.py  embed.py  ratelimit.py  tools.py
easycord/plugins/: __init__.py  _ai_providers.py  _config_manager.py  _levels_data.py  _shared.py  ai_moderator.py  auto_responder.py  economy.py  invite_tracker.py  levels.py  member_logging.py  moderation.py  openclaude.py  openclaw.py  polls.py  reaction_roles.py  role_persistence.py  starboard.py  suggestions.py  tags.py  welcome.py
easycord/plugins/roles/: QUICKSTART.md  README.md  __init__.py  cli.py  plugin.py
easycord/utils/: __init__.py  easy_embed.py  paginator.py
examples/: __init__.py  _runtime.py  basic_bot.py  core-bot.py  full_featured_bot.py  group_bot.py  plugin_bot.py  plugin_modal.py
scripts/: benchmark_i18n.py  check_release_consistency.py  fix_issues.py
server_commands/: __init__.py  fun.py  info.py  moderation.py
tests/: conftest.py  test_ai_moderator.py  test_audit.py  test_bot.py  test_bot_localization.py  test_button_builder.py  test_components.py  test_composer.py  test_context.py  test_context_ui.py  test_database.py  test_decorators.py  test_embed_cards.py  test_features.py  test_group.py  test_helpers.py  test_i18n.py  test_i18n_stabilization.py  test_i18n_tracing.py  test_levels_plugin.py  test_managers.py  test_member_logging_plugin.py  test_memory_safety.py  test_middleware.py  test_middleware_v2.py  test_misc.py  test_modal_builder.py  test_openclaude_plugin.py  test_openclaw.py  test_orchestrator.py  test_package_exports.py  test_plugin.py  test_plugin_commands.py  test_plugin_logic.py  test_plugins.py  test_select_builder.py  test_server_commands.py  test_server_config.py  test_tags_plugin.py  test_utils_and_helpers.py  (+2 more)
